8034867: Object references from expression stack are not visible as roots via jvmti FollowReferences and HeapDump

The heap walking is inconsistent without following references from expression stack, so need to fix it

Reviewed-by: coleenp, sspitsyn